--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
+
+
 
     <LinearLayout
         android:id="@+id/ll_1"
@@ -12,13 +15,32 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="#99D6FF">
+
         <TextView
-            android:background="#000000"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="300dp"
+            android:layout_height="250dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="100dp"
+            android:text="Wast Sorting Game"
+            android:background="#99D6FF"
+            android:gravity="center"
+            android:textSize="56sp"
+            android:textStyle="bold"
+            android:textColor="#000000"
             />
+
+        <Button
+            android:id="@+id/btn_start"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_gravity="center"
+            android:background="@drawable/bg_btn_start"
+            android:textSize="30sp"
+            android:text="Start"
+
+            />
+
 
     </LinearLayout>
 
