--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
             android:layout_height="250dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="100dp"
-            android:text="Wast Sorting Game"
+            android:text="Waste Sorting Game"
             android:background="#99D6FF"
             android:gravity="center"
             android:textSize="56sp"
@@ -36,9 +36,8 @@
             android:layout_marginTop="40dp"
             android:layout_gravity="center"
             android:background="@drawable/bg_btn_start"
-            android:textSize="30sp"
-            android:text="Start"
-
+            android:textSize="24sp"
+            android:text="Start Game"
             />
 
 
