--- a/app/src/main/res/layout/activity_level_page.xml
+++ b/app/src/main/res/layout/activity_level_page.xml
@@ -11,6 +11,123 @@
         android:layout_height="match_parent"
         android:background="#99D6FF"/>
 
+    <TextView
+        android:id="@+id/level_page_back_btn"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/levelpage_back_textview"
+        android:text="BACK"
+        android:textSize="18sp"
+        android:textColor="#000000"
+        android:layout_marginLeft="340dp"
+        android:layout_marginTop="10dp"/>
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#99D6FF"
+        android:text="Select Level"
+        android:textSize="45sp"
+        android:textColor="#000000"
+        android:gravity="center"
+        android:layout_marginTop="40dp"/>
+
+    <Button
+        android:id="@+id/level1_btn"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="1"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:background="@drawable/level1_btn"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="130dp"/>
+
+    <Button
+        android:id="@+id/level2_btn"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="2"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:background="@drawable/level2_btn"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="130dp"
+        android:layout_toRightOf="@id/level1_btn"/>
+
+    <Button
+        android:id="@+id/level3_btn"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="3"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:background="@drawable/level3_btn"
+        android:layout_marginTop="40dp"
+        android:layout_below="@id/level1_btn"
+        android:layout_marginLeft="100dp"/>
+
+    <Button
+        android:id="@+id/level4_btn"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="4"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:background="@drawable/level4_btn"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="40dp"
+        android:layout_below="@id/level2_btn"
+        android:layout_toRightOf="@id/level3_btn"/>
+
+    <Button
+        android:id="@+id/level5_btn"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="5"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:background="@drawable/level5_btn"
+        android:layout_marginTop="40dp"
+        android:layout_below="@id/level3_btn"
+        android:layout_marginLeft="100dp"/>
+
+    <Button
+        android:id="@+id/level6_btn"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="6"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:background="@drawable/level6_btn"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="30dp"
+        android:layout_below="@id/level4_btn"
+        android:layout_toRightOf="@id/level5_btn"/>
+
+    <Button
+        android:id="@+id/level7_btn"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="7"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:layout_below="@id/level5_btn"
+        android:background="@drawable/level7_btn"
+        android:layout_marginTop="40dp"
+        android:layout_marginLeft="100dp"/>
+
+    <Button
+        android:id="@+id/level8_btn"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:text="8"
+        android:textSize="30sp"
+        android:fontFamily="sans-serif"
+        android:layout_below="@id/level6_btn"
+        android:background="@drawable/level8_btn"
+        android:layout_marginTop="40dp"
+        android:layout_toRightOf="@id/level7_btn"
+        android:layout_marginLeft="30dp"/>
 
 </RelativeLayout>
